--- a/frontend-mentor/qr-code-component/styles/style.css
+++ b/frontend-mentor/qr-code-component/styles/style.css
@@ -14,6 +14,7 @@ body {
   width: 320px;
   border-radius: 20px;
   text-align: center;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, .1);
 }
 .card h3,
 .card p {
