--- a/frontend-mentor/qr-code-component/styles/style.scss
+++ b/frontend-mentor/qr-code-component/styles/style.scss
@@ -23,6 +23,7 @@ body {
   width: 320px;
   border-radius: 20px;
   text-align: center;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, .1);
 
   h3,
   p {
