--- a/frontend-mentor/qr-code-component/styles/style.scss
+++ b/frontend-mentor/qr-code-component/styles/style.scss
@@ -25,13 +25,13 @@ body {
   text-align: center;
   box-shadow: 0px 10px 15px rgba(0, 0, 0, .1);
 
-  h3,
+  h1,
   p {
     padding-left: 1.8rem;
     padding-right: 1.8rem;
   }
 
-  h3 {
+  h1 {
     font-weight: 700;
     color: $dark-blue;
     font-size: 1.4rem;
@@ -41,7 +41,7 @@ body {
     font-size: 15px;
     font-weight: 400;
     color: $grayish-blue;
-    margin-bottom: 40px;
+    padding-bottom: 40px;
   }
 
   &__img {
