--- a/frontend-mentor/meet-landing-page/css/style.css
+++ b/frontend-mentor/meet-landing-page/css/style.css
@@ -6,10 +6,13 @@
           box-sizing: border-box;
 }
 
+html {
+  font-size: 18px;
+}
+
 body {
   font-family: "Red Hat Display", sans-serif;
-  font-size: 18px;
-  line-height: 26px;
+  line-height: 1.444rem;
   font-weight: 500;
   background-color: #fafafa;
   display: -webkit-box;
@@ -25,14 +28,14 @@ body {
 }
 
 h1 {
-  font-size: 3.5em;
-  line-height: 1em;
+  font-size: 3.556rem;
+  line-height: 3.556rem;
   color: #28283d;
 }
 
 h2 {
-  font-size: 40px;
-  line-height: 44px;
+  font-size: 2.222rem;
+  line-height: 2.444rem;
 }
 
 h1,
@@ -46,12 +49,12 @@ h2,
 .btn,
 .text--overline,
 .section--number {
-  line-height: 26px;
+  line-height: 1.444rem;
 }
 
 .logo {
-  padding-top: 80px;
-  padding-bottom: 60px;
+  padding-top: 4.444rem;
+  padding-bottom: 3.333rem;
 }
 
 .section--number {
@@ -66,19 +69,19 @@ h2,
       -ms-flex-align: center;
           align-items: center;
   margin: auto;
-  font-size: 0.8em;
+  font-size: 0.889rem;
   color: #87879d;
   background: #fafafa;
   border: 1px solid rgba(135, 135, 157, 0.25);
   border-radius: 29px;
-  width: 56px;
-  height: 56px;
+  width: 3.111rem;
+  height: 3.111rem;
 }
 
 .section--number::before {
   content: "";
   width: 1px;
-  height: 84px;
+  height: 4.667rem;
   background-color: rgba(135, 135, 157, 0.25);
   position: absolute;
   top: -85px;
@@ -101,8 +104,8 @@ h2,
   color: #fafafa;
   background-color: #28283d;
   border-radius: 29px;
-  padding: 0.8em 40px;
-  max-height: 58px;
+  padding: 0.889rem 2.222rem;
+  max-height: 3.222rem;
 }
 
 .btn--darkblue {
@@ -137,20 +140,31 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 110px;
+  margin-bottom: 6.111rem;
+  overflow-x: hidden;
 }
 
 header h1 {
-  padding-bottom: 34px;
+  padding-bottom: 1.889rem;
 }
 
 header p {
-  padding-bottom: 48px;
+  padding-bottom: 2.667rem;
 }
 
 header h1,
 header p {
   text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
+}
+
+header .top--left {
+  -webkit-transform: translateX(-32px);
+          transform: translateX(-32px);
+}
+
+header .top--right {
+  -webkit-transform: translateX(32px);
+          transform: translateX(32px);
 }
 
 header .btn {
@@ -159,16 +173,16 @@ header .btn {
 }
 
 header .btn--darkblue {
-  margin-right: 8px;
+  margin-right: 0.444rem;
 }
 
 header .btn--purple {
-  margin-left: 8px;
-  padding: 0.8em 29px;
+  margin-left: 0.444rem;
+  padding: 0.889rem 1.611rem;
 }
 
 main h2 {
-  padding-bottom: 0.8em;
+  padding-bottom: 0.889rem;
 }
 
 main .gallery {
@@ -178,22 +192,39 @@ main .gallery {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  gap: 30px;
-  padding-bottom: 80px;
+  gap: 1.667rem;
+  padding-bottom: 4.444rem;
 }
 
 main .gallery img {
   border-radius: 8px;
-  width: 255px;
-  height: 242px;
+  width: 14.167rem;
+  height: 13.444rem;
+}
+
+main .container--text {
+  max-width: 540px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: auto;
+}
+
+main .container--text h2 {
+  max-width: 445px;
+  margin: auto;
 }
 
 main .text--overline {
   color: #4d96a9;
   text-transform: uppercase;
-  font-size: 0.8em;
-  letter-spacing: 4px;
-  padding-bottom: 0.8em;
+  font-size: 0.889rem;
+  letter-spacing: 0.222rem;
+  padding-bottom: 0.889rem;
 }
 
 footer {
