--- a/frontend-mentor/meet-landing-page/css/style.scss
+++ b/frontend-mentor/meet-landing-page/css/style.scss
@@ -29,10 +29,6 @@ body {
   line-height: 1.444rem;
   font-weight: 500;
   background-color: $white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
 }
 
 h1 {
@@ -58,11 +54,6 @@ h2,
 .text--overline,
 .section--number {
   line-height: 1.444rem;
-}
-
-.logo {
-  padding-top: 4.444rem;
-  padding-bottom: 3.333rem;
 }
 
 .section--number {
@@ -138,8 +129,17 @@ h2,
   color: $light;
 }
 
-header {
+.logo {
+  padding-top: 4.444rem;
+  padding-bottom: 3.389rem;
+  display: block;
+  margin: auto;
+}
+
+.header__content {
   display: flex;
+  justify-content: space-between;
+  text-align: center;
   margin-bottom: 6.111rem;
   overflow-x: hidden;
 
@@ -186,19 +186,20 @@ main {
   .gallery {
     display: flex;
     justify-content: center;
-    gap: 1.667rem;
+    gap: 30px;
     padding-bottom: 4.444rem;
 
     img {
       border-radius: 8px;
-      width: 14.167rem;
-      height: 13.444rem;
+      width: 255px;
+      height: 242px;
     }
   }
 
   .container--text {
     max-width: 540px;
     display: flex;
+    text-align: center;
     flex-direction: column;
     margin: auto;
 
@@ -233,8 +234,99 @@ footer {
 
 // Tablet
 @media (max-width: 768px) {
+  h1 {
+    font-size: 48px;
+    line-height: 48px;
+  }
+
+  h2 {
+    font-size: 32px;
+    line-height: 36px;
+  }
+
+  main {
+    h2 {
+      padding-bottom: 0.889rem;
+    }
+
+    .gallery {
+      display: flex;
+      justify-content: center;
+      gap: 11px;
+      padding-bottom: 4.444rem;
+
+      img {
+        width: 164px;
+        height: 156px;
+      }
+    }
+  }
+
+  footer {
+    background: url("../assets/tablet/image-footer.png"), $dark-blue;
+    background-position: center;
+    background-size: cover;
+
+    .footer__content {
+      padding: 92px 98px 66px 98px;
+      flex-direction: column;
+      text-align: center;
+
+      h2 {
+        padding-bottom: 32px;
+      }
+
+      p {
+        padding-bottom: 40px;
+
+        br {
+          display: none;
+        }
+      }
+    }
+  }
 }
 
 // Phone
 @media (max-width: 480px) {
+  h1 {
+    font-size: 40px;
+    line-height: 44px;
+  }
+
+  main {
+    h2 {
+      padding-bottom: 0.889rem;
+    }
+
+    .gallery {
+      display: flex;
+      justify-content: center;
+      gap: 25px;
+      padding-bottom: 4.444rem;
+
+      img {
+        width: 151px;
+        height: 143px;
+      }
+    }
+  }
+
+  footer {
+    background: url("../assets/mobile/image-footer.png"), $dark-blue;
+    background-position: center;
+    background-size: cover;
+
+    .footer__content {
+      padding: 92px 24px 72px 24px;
+
+      h2 {
+        padding-bottom: 24px;
+      }
+
+      p {
+        padding-bottom: 32px;
+      }
+    }
+  }
 }
