--- a/frontend-mentor/meet-landing-page/css/style.scss
+++ b/frontend-mentor/meet-landing-page/css/style.scss
@@ -26,20 +26,20 @@ html {
 
 body {
   font-family: "Red Hat Display", sans-serif;
-  line-height: 1.444rem;
+  line-height: 26px;
   font-weight: 500;
   background-color: $white;
 }
 
 h1 {
-  font-size: 3.556rem;
-  line-height: 3.556rem;
+  font-size: 64px;
+  line-height: 64px;
   color: $dark;
 }
 
 h2 {
-  font-size: 2.222rem;
-  line-height: 2.444rem;
+  font-size: 40px;
+  line-height: 44px;
 }
 
 h1,
@@ -53,7 +53,7 @@ h2,
 .btn,
 .text--overline,
 .section--number {
-  line-height: 1.444rem;
+  line-height: 26px;
 }
 
 .section--number {
@@ -130,10 +130,14 @@ h2,
 }
 
 .logo {
-  padding-top: 4.444rem;
-  padding-bottom: 3.389rem;
+  padding-top: 80px;
+  padding-bottom: 60px;
   display: block;
   margin: auto;
+}
+
+.hero__img--tablet {
+  display: none;
 }
 
 .header__content {
@@ -145,6 +149,7 @@ h2,
 
   h1 {
     padding-bottom: 1.889rem;
+    padding-top: 57px;
   }
 
   p {
@@ -158,10 +163,16 @@ h2,
 
   .top--left {
     transform: translateX(-32px);
+    margin-bottom: 55px;
+  }
+
+  .top--middle {
+    margin: auto auto 20px auto;
   }
 
   .top--right {
     transform: translateX(32px);
+    margin-top: 55px;
   }
 
   .btn {
@@ -185,6 +196,7 @@ main {
 
   .gallery {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 30px;
     padding-bottom: 4.444rem;
@@ -212,8 +224,8 @@ main {
   .text--overline {
     color: $dark-blue;
     text-transform: uppercase;
-    font-size: 0.889rem;
-    letter-spacing: 0.222rem;
+    font-size: 16px;
+    letter-spacing: 4px;
     padding-bottom: 0.889rem;
   }
 }
@@ -233,15 +245,10 @@ footer {
 }
 
 // Tablet
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
   h1 {
     font-size: 48px;
     line-height: 48px;
-  }
-
-  h2 {
-    font-size: 32px;
-    line-height: 36px;
   }
 
   main {
@@ -259,6 +266,33 @@ footer {
         width: 164px;
         height: 156px;
       }
+    }
+  }
+
+  .logo {
+    padding-top: 48px;
+    padding-bottom: 64px;
+  }
+
+  .hero__img--tablet {
+    display: block;
+    margin: auto;
+    width: 100%;
+    height: auto;
+    margin-bottom: 72px;
+  }
+
+  .header__content {
+    h1 {
+      padding-top: unset;
+    }
+
+    .top--left {
+      display: none;
+    }
+
+    .top--right {
+      display: none;
     }
   }
 
@@ -294,6 +328,15 @@ footer {
     line-height: 44px;
   }
 
+  h2 {
+    font-size: 32px;
+    line-height: 36px;
+  }
+
+  p {
+    font-size: 16px;
+  }
+
   main {
     h2 {
       padding-bottom: 0.889rem;
@@ -309,6 +352,32 @@ footer {
         width: 151px;
         height: 143px;
       }
+    }
+  }
+
+  .logo {
+    padding-bottom: 54px;
+  }
+
+  .hero__img--tablet {
+    margin-bottom: 48px;
+  }
+
+  .header__content {
+    .top--middle {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+
+    .btn--darkblue {
+      margin-right: unset;
+      margin-bottom: 16px;
+    }
+
+    .btn--purple {
+      margin-left: unset;
     }
   }
 
@@ -328,5 +397,30 @@ footer {
         padding-bottom: 32px;
       }
     }
+  }
+
+  .section--number {
+    &--01 {
+      margin-top: 153px;
+      margin-bottom: 64px;
+    }
+
+    &--02 {
+      margin-top: 163px;
+      margin-bottom: -26px;
+    }
+  }
+
+  .text--gray {
+    br {
+      display: none;
+    }
+  }
+
+  .gallery,
+  .header__content,
+  .container--text {
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
