--- a/frontend-mentor/equalizer-landing-page/scss/_desktop.scss
+++ b/frontend-mentor/equalizer-landing-page/scss/_desktop.scss
@@ -1,2 +1,100 @@
 @media screen and (min-width: 768px) {
+  body {
+    background-image: url("../assets/bg-main-desktop.png");
+    background-position: bottom 112px right -146px;
+  }
+
+  header {
+    background-image: url("../assets/bg-pattern-1.svg");
+    background-position: top -40px right 0px;
+    background-repeat: no-repeat;
+    background-size: 312px;
+    padding: 62px 165px;
+
+    .logo {
+      margin-bottom: 127px;
+    }
+
+    h1 {
+      font-size: 88px;
+      line-height: 88px;
+      letter-spacing: -1px;
+      margin-bottom: 40px;
+    }
+
+    p {
+      font-size: 20px;
+      line-height: 34px;
+      margin-bottom: 266px;
+    }
+  }
+
+  .header {
+    &__presentation {
+      max-width: 870px;
+    }
+  }
+
+  main {
+    padding-left: 165px;
+    padding-right: 165px;
+  }
+
+  .main {
+    &__images {
+      z-index: unset;
+      position: unset;
+      transform: none;
+      background-position: center 40px left 336px;
+
+      img {
+        transform: translateY(-202px);
+        width: 312px;
+        height: 642px;
+        margin-left: 102px;
+      }
+    }
+
+    &__pricing {
+      padding: 58px 56px 48px 57px;
+      max-width: 446px;
+      right: 260px;
+      top: 90px;
+
+      &--title {
+        font-size: 40px;
+        line-height: 52px;
+        margin-bottom: 22px;
+      }
+
+      &--features {
+        font-size: 20px;
+        line-height: 34px;
+        margin-bottom: 39px;
+      }
+
+      &--price {
+        margin-bottom: 46px;
+      }
+    }
+  }
+
+  footer {
+    padding: 233px 165px 91px 165px;
+  }
+}
+
+@media screen and (min-width: 1310px) {
+  footer {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .footer {
+    &__tablet {
+      display: flex;
+      align-items: center;
+      gap: 25vw;
+    }
+  }
 }
